# wikimod

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/ml/: evaluate.py  train.py
backend/app/routers/: analyze.py  history.py  model_info.py
backend/app/services/: analyzer.py  classifier.py  escalation.py  wikipedia.py
backend/scripts/: download_model.sh
backend/tests/: conftest.py  test_analyzer.py  test_classifier.py  test_escalation.py  test_models.py  test_routers_analyze.py  test_routers_history.py  test_wikipedia.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnalyzeForm.tsx  CommentCard.tsx  CommentList.tsx  ComparisonView.tsx  EscalationChart.tsx  HealthScore.tsx  HistoryView.tsx  ModelInfo.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/types/: index.ts
